fix: horizontal scrolling fix

--- a/style.css
+++ b/style.css
@@ -13,13 +13,15 @@ html {
 body{
     font-family: Roboto;
     min-height: 100vh;
-    max-width: 100vw;
+    max-width: 1920px;
+    width: 100vw;
     margin:0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-self: center;
+    overflow-x: hidden;
 }
 .header{
     display:flex;
